Added proof of concept for client CORS
